trunk/src/objects/TestExecution__c.object
<CustomObject>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <picklist>
            <picklistValues>
                <fullName>firefox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iexplore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>opera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>googlechrome</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <picklist>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tearDown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeleniumServerLog__c</fullName>
        <label>SeleniumServerLog</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( InProgress__c , &apos;Running&apos;,  
      IF(  ISPICKVAL(Phase__c, &apos;&apos;) , &apos;Inactive&apos;, 
          IF(  ISPICKVAL(Phase__c,&apos;Scheduled&apos;) ,&apos;Scheduled&apos;,  
            IF(  ISPICKVAL(Phase__c,&apos;Done&apos;) , &apos;Passed&apos;, 
               IF(  ISPICKVAL(Phase__c,&apos;Error&apos;) , &apos;Failed&apos;, &apos;Running&apos;) ) 
) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>Test__c</referenceTo>
        <relationshipLabel>TestExecutions</relationshipLabel>
        <relationshipName>TestExecutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TestExecution</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>TestExecution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestExecutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>